--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>New Article</title>
+	<link rel="stylesheet" href="CSS/all.css">
 	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -29,7 +30,26 @@
 	</header>
 	<main></main>
 	<aside class="sidebar"></aside>
-	<footer class="page-footer"></footer>
+	<footer class="page-footer">
+		<div class="wrapper">
+			<div class="copyright">
+				<p>&copy 2022 Gothum. All rights reserved</p>
+			</div>
+			<nav class="footer-nav">
+				<ul>
+					<li><a href="#">About blog</a></li>
+					<li><a href="#">Need help</a></li>
+					<li><a href="#">content guide</a></li>
+				</ul>
+			</nav>
+			<div class="social">
+				<a href="#" class="fb"><i class="fab fa-facebook-f"></i></a>				
+				<a href="#" class="tw"><i class="fab fa-twitter"></i></a>
+				<a href="#" class="g+"><i class="fab fa-google-plus-g"></i></a>
+
+			</div>
+		</div>
+	</footer>
 	
 </body>
 </html>
