--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+<!-------------------------header--------------------------------->
 	<header class="page-header">
 		<div class="wrapper">
 			<nav class="left-nav">
@@ -28,8 +29,124 @@
 		</nav>
 		</div>
 	</header>
-	<main></main>
-	<aside class="sidebar"></aside>
+	<!-------------MAIN BODY --------------------------------------------->
+	<div class="main">
+		<div class="wrapper">
+			<main>
+				<h2 class="heading">Recent Article</h2>
+				<div class="article">
+					<article>
+						<div class="article-left">
+							<img src="images/articleImages/article-1.jpg" alt="Image of article one missing">
+						</div>
+						<div class="article-right">
+							<h3>5 Standout Things to Know About the 2033 Cannes Film Festival</h3>
+							<p class="meta">
+								<span class="date">June 8, 2020 </span>
+								<span class="author">by Suraj Diwakar Singh</span>
+								<span class="category">Culture</span>
+							</p>
+							<p class="discription">
+								The Cannes Film Festival is an annual film festival held in Cannes, France, which previews new films of all genres, including documentaries from all around the world. Here are nine of the films that generated the most buzz ... 
+							</p>
+							<p class="additional">
+								<span class="views">266</span>
+								<span class="comments">3</span>
+							</p>
+
+						
+						</div>
+					</article>
+					<article>
+						<div class="article-left">
+							<img src="images/articleImages/article-2.jpg" alt="Image of article two missing">
+						</div>
+						<div class="article-right">
+							<h3>15 Time Management Tips for Achieving Your Goals</h3>
+							<p class="meta">
+								<span class="date">June 8, 2020 </span>
+								<span class="author">by Suraj Diwakar Singh</span>
+								<span class="category">Business</span>
+							</p>
+							<p class="discription">
+								Time management is the process of planning and exercising conscious control of time spent on specific activities, especially to increase effectiveness, efficiency or productivity. It is a juggling act of various demands of study, social life ...  
+							</p>
+							<p class="additional">
+								<span class="views">163</span>
+								<span class="comments">0</span>
+							</p>
+						</div>
+					</article>
+					<article>
+						<div class="article-left">
+							<img src="images/articleImages/article-3.jpg" alt="Image of article three missing">
+						</div>
+						<div class="article-right">
+							<h3>5 Ways to Be a Better Employer for Millennials and Generation Z</h3>
+							<p class="meta">
+								<span class="date">June 8, 2020 </span>
+								<span class="author">by Suraj Diwakar Singh</span>
+								<span class="category">Business</span>
+							</p>
+							<p class="discription">
+								Millennials (also known as Generation Y) are the generational demographic cohort following Generation X. There are no precise dates for when this cohort starts or ends; demographers and researchers typically use the early 1980s ... 
+							</p>
+							<p class="additional">
+								<span class="views">545</span>
+								<span class="comments">19</span>
+							</p>
+						</div>
+					</article>
+					<article>
+						<div class="article-left">
+							<img src="images/articleImages/article-4.jpg" alt="Image of article four missing">
+						</div>
+						<div class="article-right">
+							<h3>5 Cryptocurrency Trends to Guide Your Investment Strategy</h3>
+							<p class="meta">
+								<span class="date">June 8, 2020 </span>
+								<span class="author">by Suraj Diwakar Singh</span>
+								<span class="category">Money</span>
+							</p>
+							<p class="discription">
+								A cryptocurrency (or crypto currency) is digital asset designed to work as a medium of exchange that uses strong cryptography to secure financial transactions, control the creation of additional units, and verify ... 
+							</p>
+							<p class="additional">
+								<span class="views">991</span>
+								<span class="comments">17</span>
+							</p>
+						</div>
+					</article>
+					<article>
+						<div class="article-left">
+							<img src="images/articleImages/article-5.jpg" alt="Image of article five missing">
+						</div>
+						<div class="article-right">
+							<h3>The World's 50 Best Restaurants: The Full List of Winners</h3>
+							<p class="meta">
+								<span class="date">June 8, 2020 </span>
+								<span class="author">by Suraj Diwakar Singh</span>
+								<span class="category">Food</span>
+							</p>
+							<p class="discription">
+								 The World's 50 Best Restaurants is a list produced by the British magazine Restaurant, based on a poll of international chefs, restaurateurs, gourmands and restaurant critics. In addition to the main ranking, the Chef's Choice ...  
+							</p>
+							<p class="additional">
+								<span class="views">396</span>
+								<span class="comments">0</span>
+							</p>
+						</div>
+					</article>
+				</div>
+				<button class="more">More Articles</button>
+			</main>
+		<aside class="right-sidebar"></aside>
+	</div>
+</div>
+
+
+
+	<!-----------------------------FOOTER---------------------------------->
 	<footer class="page-footer">
 		<div class="wrapper">
 			<div class="copyright">
