Added: Code to add search box in the page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
 				</div>
 				<button class="more">More Articles</button>
 			</main>
-		<aside class="right-sidebar"></aside>
+<!------------ASIDE------------------------------------------------>
+		<aside class="right-sidebar">
+			<div class="search-box">
+				<label for="search"><i class="fas fa-search"></i></label>
+				<input type="text" placeholder="keyword">
+			</div>
+			<div class="claender-widget">
+				<div class="calender-top">
+					<div class="calender-prev"><i class="fas fa-arrow-circle-left"></i></div>
+					<div class="calender-month">August 2020</div>
+					<div class="calender-next"><i class="fas fa-arrow-circle-right"></i></div>
+				</div>
+				<div class="calender-body"></div>
+			</div>
+		</aside>
 	</div>
 </div>
 
