--- a/index.html
+++ b/index.html
@@ -146,13 +146,70 @@
 				<label for="search"><i class="fas fa-search"></i></label>
 				<input type="text" placeholder="keyword">
 			</div>
-			<div class="claender-widget">
+			<div class="calender-widget">
 				<div class="calender-top">
 					<div class="calender-prev"><i class="fas fa-arrow-circle-left"></i></div>
 					<div class="calender-month">August 2020</div>
 					<div class="calender-next"><i class="fas fa-arrow-circle-right"></i></div>
 				</div>
-				<div class="calender-body"></div>
+				<div class="calender-body">
+					<table>
+						<tr>
+							<th>S</th>
+							<th>M</th>
+							<th>T</th>
+							<th>W</th>
+							<th>T</th>
+							<th>F</th>
+							<th>S</th>
+						</tr>
+						<tr>
+							<td>28</td>
+							<td>29</td>
+							<td>30</td>
+							<td>31</td>
+							<td class="current-month">1</td>
+							<td class="current-month">2</td>
+							<td class="current-month">3</td>
+						</tr>
+						<tr>
+							<td class="current-month">4</td>
+							<td class="current-month">5</td>
+							<td class="current-month">6</td>
+							<td class="current-month">7</td>
+							<td class="current-month">8</td>
+							<td class="current-month">9</td>
+							<td class="current-month">10</td>
+						</tr>
+						<tr>
+							<td class="current-month">11</td>
+							<td class="current-month">12</td>
+							<td class="current-month">13</td>
+							<td class="current-month">14</td>
+							<td class="current-month">15</td>
+							<td class="current-month">16</td>
+							<td class="current-month">17</td>
+						</tr>
+						<tr>
+							<td class="current-month current-day">18</td>
+							<td class="current-month">19</td>
+							<td class="current-month">20</td>
+							<td class="current-month">21</td>
+							<td class="current-month">22</td>
+							<td class="current-month">23</td>
+							<td class="current-month">24</td>
+						</tr>
+						<tr>
+							<td class="current-month">25</td>
+							<td class="current-month">26</td>
+							<td class="current-month">27</td>
+							<td class="current-month">28</td>
+							<td class="current-month">29</td>
+							<td class="current-month">30</td>
+							<td class="current-month">31</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</aside>
 	</div>
