--- a/index.html
+++ b/index.html
@@ -211,6 +211,29 @@
 					</table>
 				</div>
 			</div>
+			<div class="popular-news">
+				<h2>Popular News</h2>
+				<article>
+					<p class="date meta">June 5, 2033</p>
+					<h3>Scene: The Guide</h3>
+				</article>
+				<article>
+					<p class="date meta">June 6, 2020</p>
+					<h3>Discovering Relatives and Relics in Southern Sweden</h3>
+				</article>
+				<article>
+					<p class="date meta">June 7, 2020</p>
+					<h3>Wileman Home Tour: Exeter History Restored</h3>
+				</article>
+				<article>
+					<p class="date meta">August 5, 2020</p>
+					<h3>Spring Seafood Medley</h3>
+				</article>
+				<article>
+					<p class="date meta">August 18, 2020</p>
+					<h3>Easter Brunch with a Bite</h3>
+				</article>
+			</div>
 		</aside>
 	</div>
 </div>
