--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <!-------------------------header--------------------------------->
+
+<!---------PLEASE IGNORE THE LINK USED IN THE ANCHOR TAG---------->
 	<header class="page-header">
 		<div class="wrapper">
 			<nav class="left-nav">
